--- a/css/style.css
+++ b/css/style.css
@@ -714,6 +714,7 @@ img {
     background: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+    padding: 40px;
 }
 
 .modal-button-close {
@@ -731,4 +732,125 @@ img {
     padding: 0;
     cursor: pointer;
 }
+
+.modal-button-close:focus {
+    border-color: var(--accent-color);
+}
+
+.modal-button-close:focus .modal-icon {
+    fill: var(--accent-color);
+}
+
+.modal-form {
+    display: block;
+}
+
+
+.modal-form-hidden {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 12px;
+    }
+
+.modal-form-label {
+    display: block;
+    margin-bottom: 10px;
+}
+
+.modal-form-name {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--second-text-color);
+    margin-bottom: 4px;
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+    cursor: pointer;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-textarea {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px 16px;
+    margin-bottom: 20px;
+    resize: none;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    cursor: pointer;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-textarea:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+
+..modal-form-textarea::placeholder {
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.modal-form-input-wrapper {
+    position: relative;
+    display: block;
+}
+
+.modal-form-input:focus {
+    outline: none;
+    border-color: var(--accent-color);
+}
+.modal-form-icon {
+    position: absolute;
+    top: 11px;
+    left: 12px;
+    cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus +.modal-form-icon {
+    fill: var(--accent-color);
+}
+
+.modal-form-checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--second-text-color);
+}
+
+
+.modal-button-submit {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    font-weight: 700;
+    font-size: 16px;    
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color:#FFFFFF;
+    width: 200px;
+    height: 50px;
+    left: 700px;
+    top: 712px;
+    border: none;
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+
 /*======END MODAL======*/
