--- a/css/style.css
+++ b/css/style.css
@@ -574,6 +574,70 @@ img {
 .join-social-list-item:not(:last-child) {
     margin-right: 10px;
 }
+
+.footer-form {
+    margin-left: auto;
+}
+
+.footer-form-wrapper {
+    display: flex;
+    margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+}
+.footer-form-hidden {
+   font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.footer-form-input {
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
+    cursor: pointer;
+    outline: none;
+    margin-right: 12px;
+    padding-left: 16px;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-form-input::placeholder {
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.footer-button-submit {
+    width: 200px;
+    height: 50px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    background-color: var(--accent-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-button-icon {
+    margin-left: 10px;
+}
+
 /*======END FOOTER======*/
 
 /*======START PORTFOLIO======*/
@@ -783,7 +847,6 @@ img {
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding: 12px 16px;
-    margin-bottom: 20px;
     resize: none;
     font-size: 14px;
     line-height: 1.14;
@@ -797,7 +860,7 @@ img {
     border-color: var(--accent-color);
 }
 
-..modal-form-textarea::placeholder {
+.modal-form-textarea::placeholder {
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
@@ -823,6 +886,11 @@ img {
 
 .modal-form-input:focus +.modal-form-icon {
     fill: var(--accent-color);
+}
+
+.modal-form-checkbox-wrapper {
+    margin-top: 20px;
+    margin-left: 14px;
 }
 
 .modal-form-checkbox-label {
@@ -853,4 +921,43 @@ img {
     border-radius: 4px;
 }
 
-/*======END MODAL======*/
+.modal-form-checkbox-label {
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--second-text-color);
+}
+
+.modal-form-checkbox-label-policy {
+    color: var(--accent-color);
+}
+
+.modal-form-checkbox-label::before {
+    display: inline-block;
+    width: 16px;
+    height: 15px;
+    border: 1px solid #212121;
+    border-radius: 2px;
+    content: ' ';
+    cursor: pointer;
+    margin-right: 8px;
+}   
+
+.modal-form-checkbox:checked + .modal-form-checkbox-label::before {
+    background-image: url('../img/icon-check.svg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    border: var(--accent-color);
+}
+
+.modal-form-checkbox {
+    transition: outline 250mx cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-checkbox:focus + .modal-form-checkbox-label::before {
+    outline: 1px solid var(--accent-color);
+}
+
+/*======END MODAL======*/  
