--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,7 @@ img {
     background: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: transparent;
     cursor: pointer;
     margin-top: 30px;
     margin-right: auto;
@@ -594,6 +595,10 @@ img {
     color: #FFFFFF;
 }
 
+.footer-form-label {
+    margin-right: 12px;
+}
+
 .footer-form-input {
     width: 358px;
     height: 50px;
@@ -603,7 +608,6 @@ img {
     background-color: transparent;
     cursor: pointer;
     outline: none;
-    margin-right: 12px;
     padding-left: 16px;
     font-size: 16px;
     line-height: 1.25;
@@ -623,6 +627,7 @@ img {
     height: 50px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: transparent;
     background-color: var(--accent-color);
     font-weight: 700;
     font-size: 16px;
@@ -824,12 +829,15 @@ img {
     margin-bottom: 10px;
 }
 
+.modal-form-label:last-child {
+    margin-bottom: 0px;
+}
+
 .modal-form-name {
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
     color: var(--second-text-color);
-    margin-bottom: 4px;
 }
 
 .modal-form-input {
@@ -842,11 +850,13 @@ img {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-textarea {
+    display: block;
     width: 100%;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     padding: 12px 16px;
+    margin-top: 4px;
     resize: none;
     font-size: 14px;
     line-height: 1.14;
@@ -870,6 +880,7 @@ img {
 .modal-form-input-wrapper {
     position: relative;
     display: block;
+    margin-top: 4px;
 }
 
 .modal-form-input:focus {
@@ -890,7 +901,6 @@ img {
 
 .modal-form-checkbox-wrapper {
     margin-top: 20px;
-    margin-left: 14px;
 }
 
 .modal-form-checkbox-label {
@@ -924,6 +934,7 @@ img {
 .modal-form-checkbox-label {
     display: flex;
     align-items: center;
+    justify-content: center;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
@@ -938,7 +949,7 @@ img {
     display: inline-block;
     width: 16px;
     height: 15px;
-    border: 1px solid #212121;
+    border: 2px solid #212121;
     border-radius: 2px;
     content: ' ';
     cursor: pointer;
@@ -957,7 +968,7 @@ img {
 }
 
 .modal-form-checkbox:focus + .modal-form-checkbox-label::before {
-    outline: 1px solid var(--accent-color);
+    outline: 2px solid var(--accent-color);
 }
 
 /*======END MODAL======*/  
