add cursor to footet

--- a/css/style.css
+++ b/css/style.css
@@ -637,6 +637,7 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .footer-button-icon {
